@startuml

    namespace ua.khpi.oop.malokhvii05.util.algorithms.sort {

        class SortAlgorithmFactory {
            {static} -classMapping: Map<String, Class<?>>
            {static} -defaultAlgorithm: Class<?>
            -SortAlgorithmFactory()
            {static} +getAlgorithm(String): SortAlgorithm<T>
            {static} +getAlgorithm(String, Comparator<?>): SortAlgorithm<T>
            {static} +getDefaultAlgorithm(): SortAlgorithm<T>
            {static} +getDefaultAlgorithm(Comparator<?>): SortAlgorithm<T>
            {static} +getRegisteredAlgorithms(): Set<String>
            {static} -loadBasicAlgorithms(): void
            {static} +registerAlgorithm(String, Class<?>): void
            {static} +setDefaultAlgorithm(Class<?>): void
            {static} +unregisterAlgorithm(String): void
        }

        class SimpleQuickSort<T> {
            +SimpleQuickSort(Comparator<T>)
            -partition(Array<T>, int, int): int
            +sort(Array<T>): void
        }

        class ShellSort<T> {
            +ShellSort(Comparator<T>)
            +sort(Array<T>): void
        }

        class InsertionSort<T> {
            +InsertionSort(Comparator<T>)
            +sort(Array<T>): void
        }

        class NullSortAlgorithm<T> {
            {static} +INSTANCE: SortAlgorithm
            -NullSortAlgorithm()
            +isReversedOrder(): boolean
            +setReversedOrder(boolean): void
            +sort(Array<T>): void
        }

        class SelectionSort<T> {
            +SelectionSort(Comparator<T>)
            +sort(Array<T>): void
        }

        class BottomUpMergeSort<T> {
            +BottomUpMergeSort(Comparator<T>)
            -mergeSlice(Object[], Object[], int, int): void
            +sort(Array<T>): void
        }

        class GnomeSort<T> {
            +GnomeSort(Comparator<T>)
            +sort(Array<T>): void
        }

        class JSort<T> {
            +JSort(Comparator<T>)
            -inverseReheap(Array<T>, int): void
            -reheap(Array<T>, int): void
            +sort(Array<T>): void
        }

        class TimSort<T> {
            {static} -DEFAULT_MERGE_BUFFER_SIZE: int
            {static} -DEFAULT_MIN_GALLOP: int
            {static} -DEFAULT_MIN_MERGE: int
            -array: T[]
            -mergeBuffer: T[]
            -minGallop: int
            -runBaseStack: int[]
            -runSizeStack: int[]
            -stackSize: int
            +TimSort(Comparator<T>)
            {static} -binaryInsertionSort(T[], int, int, int, Comparator<?>): void
            {static} -countRunAndMakeAscending(T[], int, int, Comparator<T>): int
            {static} -getMinRunSize(int): int
            {static} -leftGallopSearch(T[], T, int, int, int, Comparator<?>): int
            {static} -reverseSlice(Object[], int, int): void
            {static} -rightGallopSearch(T[], T, int, int, int, Comparator<?>): int
            -ensureMergeBufferCapacity(int): void
            -mergeAdjacentRuns(): void
            -mergeAllRuns(): void
            -mergeAtIndex(int): void
            -mergeHighRuns(int, int, int, int): void
            -mergeLowRuns(int, int, int, int): void
            -pushRun(int, int): void
            -setUnorderedArray(T[], int): void
            +sort(Array<T>): void
        }

        class BubbleSort<T> {
            +BubbleSort(Comparator<T>)
            +sort(Array<T>): void
        }

        abstract class AbstractSortAlgorithm<T> {
            #isReversedOrder: boolean
            +AbstractSortAlgorithm(Comparator<T>)
            +isNull(): boolean
            +isReversedOrder(): boolean
            +setReversedOrder(boolean): void
            #swap(Array<T>, int, int): void
        }

        class HeapSort<T> {
            +HeapSort(Comparator<T>)
            -heapify(Array<T>, int, int): void
            +sort(Array<T>): void
        }

        interface SortAlgorithm<T> {
            {abstract} +isReversedOrder(): boolean
            {abstract} +setReversedOrder(boolean): void
            {abstract} +sort(Array<T>): void
        }

        class TopDownMergeSort<T> {
            +TopDownMergeSort(Comparator<T>)
            -mergeSlices(Object[], Object[]): Object[]
            -mergeSort(Object[]): Object[]
            +sort(Array<T>): void
        }

        AbstractSortAlgorithm <|-- SimpleQuickSort

        AbstractSortAlgorithm <|-- ShellSort

        AbstractSortAlgorithm <|-- InsertionSort

        abstract class ua.khpi.oop.malokhvii05.util.algorithms.NullAlgorithmWithComparator<T>
        ua.khpi.oop.malokhvii05.util.algorithms.NullAlgorithmWithComparator <|-- NullSortAlgorithm

        SortAlgorithm <|.. NullSortAlgorithm

        AbstractSortAlgorithm <|-- SelectionSort

        AbstractSortAlgorithm <|-- BottomUpMergeSort

        AbstractSortAlgorithm <|-- GnomeSort

        AbstractSortAlgorithm <|-- JSort

        AbstractSortAlgorithm <|-- TimSort

        AbstractSortAlgorithm <|-- BubbleSort

        abstract class ua.khpi.oop.malokhvii05.util.algorithms.AbstractAlgorithmWithComparator<T>
        ua.khpi.oop.malokhvii05.util.algorithms.AbstractAlgorithmWithComparator <|-- AbstractSortAlgorithm

        SortAlgorithm <|.. AbstractSortAlgorithm

        AbstractSortAlgorithm <|-- HeapSort

        interface ua.khpi.oop.malokhvii05.util.algorithms.AlgorithmWithComparator<T> {
            {abstract} +getComparator(): Comparator<T>
            {abstract} +setComparator(Comparator<T>): void
        }
        ua.khpi.oop.malokhvii05.util.algorithms.AlgorithmWithComparator <|.. SortAlgorithm

        AbstractSortAlgorithm <|-- TopDownMergeSort

    }

@enduml
